<resources>

    <string name="app_name">智能点检</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">智能点检</string>
    <string name="whats_new_msg1">"如你所知，
起重机点检应当步入智能化"</string>
    <string name="whats_new_title2">"一切从本系统开始
你通过身份验证进入了系统"</string>
    <string name="whats_new_title3">你就打开了一个信息化档案</string>
    <string name="whats_new_msg3">将起重机的点检点滴记录在档案中</string>
    <string name="whats_new_title4">你只需将点检系统中下载好相应的配置文件</string>
    <string name="whats_new_title5">"将这些文件中的信息，
写入到身份验证卡以及点检标签中"</string>
    <string name="whats_new_tip">使用本系统通过验证并将信息读出</string>
    <string name="whats_new_title6">"在\"起重机的点检区域\"，
贴上相应的标签，然后触动指尖"</string>
    <string name="whats_new_title7_01">就能完成点检，</string>
    <string name="whats_new_title7_02">这是多么奇妙！</string>
    <string name="whats_new_start">点检系统</string>
    <string name="whats_new_today">今天</string>
    <string name="whats_new_yesterday">昨天</string>
    <string name="whats_new_daybeforeyesterday">20</string>
    <string name="whats_new_guangzhou">广州</string>
    <string name="whats_new_march">3月</string>
    <string name="normal">正常</string>
    <string name="abnormal">异常</string>
    <string name="nothing">无</string>
    <string name="scanTagTitle">标签扫描</string>
    <string name="peoplevalidate">人员身份验证</string>
    <string name="startscan">开始扫描</string>
    <string name="scanTag">扫描标签</string>
    <string name="beizhu">请输入备注</string>
    <string name="str_title">主菜单</string>
    <string name="beizhutitle">备注</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="writebeizhu">填写备注</string>
    
    <!-- 登录界面部分 -->
    <string name="login_uname">请输入用户名</string>
    <string name="login_pwd">请输入密码</string>
    <string name="login_rem_uname">记住用户名</string>
    <string name="login_rem_pwd">记住密码</string>
    <string name="login_login">登录</string>
    <string name="show_password">显示密码</string>
    <string name="logo_name">起重机械</string>
    <string name="project_name">智   能   点   检   平   台</string>
    <string name="LOGIN_FAILED">登录失败</string>
    <!-- 登录界面部分 -->
    
    <!-- 连接服务器操作部分 -->
    <string name="LOGIN_SECURITY_CHECK">http://www.cseicms.com/inspectManagement/j_spring_cas_security_check</string>
    <string name="test_jsonstring">{&quot;message&quot;:&quot;操作成功！&quot;,&quot;data&quot;:{&quot;number&quot;:6,&quot;role&quot;:&quot;机修人员&quot;,&quot;roleNum&quot;:1,&quot;name&quot;:&quot;赵伟&quot;},&quot;code&quot;:200}</string>
    <string name="USER_GETIMF">http://www.cseicms.com/inspectManagement/rs/inspectUser/currentUser</string>
    <string name="UPLOAD_FILE">http://www.cseicms.com/inspectManagement/rs/inspectResult/upload</string>
    <string name="usertasklist_GETTASKDATA">http://www.cseicms.com/inspectManagement/rs/inspectTask/userLastTask</string>
    <string name="GetConfigFileListAddress">http://www.cseicms.com/inspectManagement/rs/inspectTable/getList</string>
    <string name="GetConfigFileBaseAddress">http://www.cseicms.com/inspectManagement/rs/configuration/downloadInspectTable/</string>
    <string name="GetRoleTableFileAddress">http://www.cseicms.com/inspectManagement/rs/roleTablesConfiguration/downloadRoleTable</string>
    <!-- 连接服务器操作部分 -->
    <!-- 上传文件部分 -->
    <string name="UPLOAD_FILLE_TEST">/sdcard/机修人员点检表-赵伟-20140714071147.xml</string>
    <string name="upload_success">上传文件成功</string>
    <string name="upload_failed">上传文件失败</string>
    
    <!-- 上传文件部分 -->
    <!-- 主界面部分 -->
    <string name="text_project">点检项目</string>
    <string name="text_task">待做任务</string>
    <string name="text_history">点检历史</string>
    
    <!-- 公共部分 -->
    <string name="common_devicename">设备名：</string>
    <!-- 公共部分 -->
    <string name="usertasklist_header">任务列表</string>
    <string name="usertasklist_taskname">任务名：</string>
    <string name="usertasklist_deadline">截止时间：</string>
    <string name="fav_empty_hint_for_pos_loginned">"没有点检记录"</string>
    
    <!-- 对话框部分 -->
    <string name="dialog_title">提示</string>
    <string name="dialog_login">正在登录，请稍候...</string>
    <string name="dialog_loadfile">正在加载文件，请稍候...</string>
    <string name="dialog_uploadfile">正在上传文件，请稍候...</string>
    <string name="dialog_loadtask">正在加载任务，请稍候...</string>
    <!-- 历史记录item部分 -->
    <string name="history_item_tablename">点检表：</string>
    <string name="history_item_finishtime">完成时间：</string>
    
    
    <!-- 表格中文名 -->
    <string name="assets_jixiurenyuandianjianbiao">/机修人员点检表.xml</string>
    <string name="assets_menjiduijixiejishuyuandianjianbiao">/门机队机械技术员点检表.xml</string>
    <string name="assets_menjijishuyuandianqirichangdianjianbiao">/门机技术员电气日常点检表.xml</string>
    <string name="assets_menjijiansuzhuanxiangdianjianka">/门机减速机专项点检卡.xml</string>
    <string name="assets_menjisijirichangdianjianbiao">/门机司机日常点检表.xml</string>
    <string name="assets_menjizhouyidingbaozhuanxiangdianjiankapian">/门机周一定保专项点检卡片.xml</string>
    <string name="assets_renyuanpeizhi">/人员配置.xml</string>
    
    <!-- 文件默认保存位置 -->
    <string name="default_configsavepath">/inspect/config</string>
    <string name="default_datasavepath">inspect/data</string>
    
</resources>
