<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/whats_new_bg_05" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/Medium_TextSize" android:id="@+id/title_tv" android:text="@string/whats_new_title5" style="@style/whats_new_title" />
    <LinearLayout android:orientation="horizontal" android:paddingTop="60.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="90.0dip" android:layout_height="wrap_content">
            <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:text="@string/whats_new_daybeforeyesterday" style="@style/whats_new_icon_title" />
                <TextView android:paddingLeft="10.0dip" android:text="@string/whats_new_march" style="@style/whats_new_icon_msg" />
            </LinearLayout>
            <TextView android:text="@string/whats_new_guangzhou" style="@style/whats_new_icon_msg" />
        </LinearLayout>
        <ImageView android:src="@drawable/whats_new_04_04" style="@style/whats_new_icon" />
    </LinearLayout>
    <TextView android:textSize="12.0dip" android:textColor="#ffffffff" android:background="@drawable/whats_new_tip_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="90.0dip" android:layout_marginRight="10.0dip" android:text="@string/whats_new_tip" />
</LinearLayout>
