<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/whats_new_bg_04"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title_tv"
        style="@style/whats_new_title"
        android:text="@string/whats_new_title4" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="60.0dip" >

        <LinearLayout
            android:layout_width="90.0dip"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/whats_new_icon_title"
                android:text="@string/whats_new_today" />

            <TextView
                style="@style/whats_new_icon_msg"
                android:text="@string/whats_new_guangzhou" />
        </LinearLayout>

        <ImageView
            style="@style/whats_new_icon"
            android:src="@drawable/whats_new_03_01" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20.0dip" >

        <LinearLayout
            android:layout_width="90.0dip"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/whats_new_icon_title"
                android:text="@string/whats_new_yesterday" />

            <TextView
                style="@style/whats_new_icon_msg"
                android:text="@string/whats_new_guangzhou" />
        </LinearLayout>

        <ImageView
            style="@style/whats_new_icon"
            android:src="@drawable/whats_new_04_02" />

        <ImageView
            style="@style/whats_new_icon"
            android:src="@drawable/whats_new_04_03" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20.0dip" >

        <LinearLayout
            android:layout_width="90.0dip"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/whats_new_icon_title"
                    android:text="@string/whats_new_daybeforeyesterday" />

                <TextView
                    style="@style/whats_new_icon_msg"
                    android:paddingLeft="10.0dip"
                    android:text="@string/whats_new_march" />
            </LinearLayout>

            <TextView
                style="@style/whats_new_icon_msg"
                android:text="@string/whats_new_guangzhou" />
        </LinearLayout>

        <ImageView
            style="@style/whats_new_icon"
            android:src="@drawable/whats_new_04_04" />

        <ImageView
            style="@style/whats_new_icon"
            android:src="@drawable/whats_new_04_05" />
    </LinearLayout>

</LinearLayout>