<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" > 

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/myred"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/tbname"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:text=""
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:singleLine="true"
            android:text="菜单"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="3dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/icon_arrow_down" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.28" 
        android:orientation="horizontal">
         <ExpandableListView
        android:id="@+id/inspectItem"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:cacheColorHint="@null"
        android:childDivider="@drawable/child_bg"
        android:childIndicatorLeft="0dp"
        android:divider="@color/Grey"
        android:dividerHeight="1dp"
        android:groupIndicator="@null"
        android:scrollbarAlwaysDrawHorizontalTrack="true">
    </ExpandableListView>    
    </LinearLayout>
    
    <RelativeLayout
        android:id="@+id/inspectResultPane"
        android:layout_width="match_parent"
        android:layout_height="40dp" 
        android:orientation="horizontal"
        android:background="@color/weightGray"
        android:visibility="gone"
        >
        <RadioGroup 
           android:id="@+id/insepctResult"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal"  
        >
        <RadioButton 
            android:id="@+id/normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal"
            />
           <RadioButton 
            android:id="@+id/abnormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abnormal"
            />
           <RadioButton 
            android:id="@+id/nothing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nothing"
            />   
        </RadioGroup>
        <Button android:id="@+id/beizhu"
		android:layout_height="30dp"
		android:layout_width="70dp"
		android:background="@color/black" 
		android:textColor="@color/white"
		android:layout_marginTop="4dp"
		android:layout_marginRight="5dp"
		android:layout_alignParentRight="true"
		android:text="@string/writebeizhu" />
</RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:orientation="horizontal" 
        >
    </LinearLayout>
    <Button
        android:id="@+id/startScan"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/scanTag" />
</LinearLayout>