<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/whats_new_bg_03" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title_tv"
            style="@style/whats_new_title"
            android:text="@string/whats_new_title3" />

        <ImageView
            android:id="@+id/img_iv"
            style="@style/whats_new_img"
            android:src="@drawable/whats_new_img3" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="50.0dip" >

            <LinearLayout
                android:layout_width="90.0dip"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    style="@style/whats_new_icon_title"
                    android:text="@string/whats_new_today" />

                <TextView
                    style="@style/whats_new_icon_msg"
                    android:text="@string/whats_new_guangzhou" />
            </LinearLayout>

            <ImageView
                style="@style/whats_new_icon"
                android:src="@drawable/whats_new_03_01" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingTop="260.0dip" >

        <TextView
            android:id="@+id/whats_new_nickname_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffffff"
            android:textSize="@dimen/Medium_TextSize" />

        <ImageView
            android:id="@+id/whats_new_avatar_iv"
            android:layout_width="82.0dip"
            android:layout_height="82.0dip"
            android:layout_marginRight="30.0dip"
            android:background="@drawable/friendactivity_personalportrait"
            android:padding="6.0dip"
            android:scaleType="fitXY"
            android:src="@drawable/whats_new_default_avatar" />
    </LinearLayout>

</FrameLayout>