<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainactivity_bg"
    android:orientation="vertical"
    android:scrollbars="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp"
                android:layout_marginTop="60dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/logo_name"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:background="@color/red" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/project_name"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/common_searchbox_home_bg"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="20dp"
                android:scrollbars="vertical" >

                <AutoCompleteTextView
                    android:id="@+id/aedt_uname"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/common_listitem_singleline_high"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/about_btn_normal_bg"
                    android:drawableBottom="#BAE8E5"
                    android:ems="10"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/login_uname"
                    android:paddingBottom="5dp"
                    android:paddingLeft="2dp"
                    android:paddingTop="5dp"
                    android:textSize="15sp" >
                    <requestFocus />
                </AutoCompleteTextView>

                <EditText
                    android:id="@+id/edt_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/common_listitem_singleline_high"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/about_btn_normal_bg"
                    android:ems="10"
                    android:hint="@string/login_login"
                    android:inputType="textPassword"
                    android:paddingBottom="5dp"
                    android:paddingLeft="2dp"
                    android:paddingTop="5dp"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp" >

                    <CheckBox
                        android:id="@+id/cb_show_pwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/show_password"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                    <CheckBox
                        android:id="@+id/cb_rem_pwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/login_rem_pwd"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                </LinearLayout>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="1.0px"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginRight="10.0dip"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/common_divider_line" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/button_my_login"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/login_login"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>